# CWE-paper

./: .env.example  .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
data/: bigvul_diff_dev.jsonl  bigvul_diff_pilot.jsonl  bigvul_diffmsg_dev.jsonl  bigvul_diffmsg_pilot.jsonl  cwe_tree.json  cwe_tree.sha256  cwe_tree_coarse.json  cwe_tree_coarse.sha256  cwe_tree_pilot.json  cwe_tree_pilot.sha256  primevul_dev.jsonl  primevul_pilot.jsonl
paper/: .gitignore  README.md  main.tex  references.bib
results/: beam_primevul_dev.jsonl  best_of_n_primevul_dev.jsonl  deep_nano_mcts128.jsonl  deep_nano_mcts16.jsonl  deep_nano_mcts64.jsonl  dev12_greedy_coarse.jsonl  dev12_greedy_fixed.jsonl  dev12_greedy_pilot.jsonl  dev15_greedy_coarse_anthropic_claude-haiku-4.5.jsonl  dev15_greedy_coarse_deepseek_deepseek-chat-v3.1.jsonl  dev50_greedy.jsonl  diff_greedy_anthropic_claude-haiku-4.5.jsonl  diff_greedy_deepseek_deepseek-chat-v3.1.jsonl  diff_greedy_gpt-4.1-nano.jsonl  diffmsg_greedy_anthropic_claude-haiku-4.5.jsonl  diffmsg_greedy_deepseek_deepseek-chat-v3.1.jsonl  diffmsg_greedy_gpt-4.1-nano.jsonl  diffmsg_greedy_gpt-4o.jsonl  diffmsg_greedy_haiku50.jsonl  error_ambiguity_s13.json  greedy_primevul_dev.jsonl  grid_primevul_dev.csv  mcts_reason_bigvul_diffmsg_dev.jsonl  mcts_tax_primevul_dev.jsonl  pilot_bigvul_diffmsg_pilot.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-haiku-4-5.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-haiku-4-5_fulltree_only-greedy-mcts_tax16.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-haiku-4-5_only-mcts_reason8.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-haiku-4-5_only-mcts_tax16-mcts_reason8.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-sonnet-4-6_fulltree_only-greedy-mcts_tax16.csv  pilot_bigvul_diffmsg_pilot_anthropic_claude-sonnet-4-6_only-greedy-mcts_tax16-mcts_reason8.csv  pilot_bigvul_diffmsg_pilot_deepseek_deepseek-chat-v3-1.csv  pilot_bigvul_diffmsg_pilot_deepseek_deepseek-chat-v3-1_only-mcts_tax16-mcts_reason8-self_consistency8.csv  pilot_bigvul_diffmsg_pilot_google_gemini-2-5-flash-lite_only-greedy-self_consistency8-mcts_tax16-mcts_reason8.csv  pilot_bigvul_diffmsg_pilot_gpt-4-1-nano.csv  pilot_bigvul_diffmsg_pilot_gpt-4-1-nano_external_judge.csv  pilot_bigvul_diffmsg_pilot_gpt-4-1-nano_external_judge_only-mcts_tax16-mcts_reason8.csv  pilot_bigvul_diffmsg_pilot_gpt-4-1-nano_only-beam4.csv  (+14 more)
scripts/: build_bigvul_diff.py  run_grid.py  (+10 more)
(+156 files in other folders)
