[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentclass"
version = "0.1.0"
description = "Description-grounded hierarchical multi-agent framework for CWE classification with temporal generalization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Anonymous Authors" },
]
keywords = ["llm", "agents", "vulnerability-detection", "cwe", "rag"]

dependencies = [
    # Core LLM stack
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    # Retrieval
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "datasets>=3.0.0",
    "scikit-learn>=1.5.0",
    "datasketch>=1.6.5",  # MinHash for dedup
    # Config / env
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",  # retries
    "diskcache>=5.6.3", # LLM call cache
    "tiktoken>=0.7.0",
    # MITRE / data sources
    "requests>=2.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
analysis = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "wandb>=0.18.0",
]
gpu = [
    # Install separately based on CUDA version, leave commented:
    # "vllm>=0.6.0",
    # "torch>=2.4.0",
    "faiss-gpu-cu12>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-handle/AgentCLASS"
Repository = "https://github.com/your-handle/AgentCLASS"

[project.scripts]
agentclass-pilot = "agentclass.cli:pilot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers"
